Fix build by enabling preview language features