@@ -44,6 +44,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
+				<configuration>
+					<enablePreview>true</enablePreview>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -51,6 +54,7 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<argLine>
+						--enable-preview
 						--add-opens=dev.nipafx.args/dev.nipafx.args=ALL-UNNAMED
 					</argLine>
 				</configuration>
